Harden v0.1.1 release
